crates/shell/src/parser/snapshots/omp_shell__parser__word__tests__parse_ansi_c_quoted_escape_seq.snap
---
source: brush-parser/src/word.rs
expression: "test_parse(r\"$'\\\\'\")?"
---
ParseTestResults(
  input: "$\'\\\\\'",
  result: [
    WordPieceWithSource(
      piece: AnsiCQuotedText("\\\\"),
      start_index: 0,
      end_index: 5,
    ),
  ],
)
