crates/shell/src/parser/snapshots/omp_shell__parser__word__tests__parse_bare_dollar.snap
---
source: crates/shell/src/parser/word.rs
expression: "test_parse(\"$\")?"
---
ParseTestResults(
  input: "$",
  result: [
    WordPieceWithSource(
      piece: Text("$"),
      start_index: 0,
      end_index: 1,
    ),
  ],
)
